--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -150,9 +150,16 @@ After paying a tranche, \textbf{remove all Black Cubes} from every Windmill and 
 \begin{tikzpicture}[overlay]
     \centering
     \node at (4.4, 5.5) {\includegraphics[width=0.45\textwidth]{\maps/gold_rush-solo.png}};
+    \node at (5.4, 5.05) {\large{{\textbf{\textcolor{deepskyblue}{N1}}}}};
     \node at (4.4, 2.5) {\footnotesize{\textbf{SOLO VARIANT}}};
+
     \node at (4.5, -2) {\includegraphics[width=0.48\textwidth]{\maps/gold_rush-1v1.png}};
-    \node at (4.5, -6) {\footnotesize{\textbf{1v1 VARIANT}}};
+    \node at (4.9, 0.3) {\large{{\textbf{\textcolor{deepskyblue}{N1}}}}};
+    \node at (4.5, -1.5) {\large{{\textbf{\textcolor{deepskyblue}{\#C1}}}}};
+    \node at (4.1, -3.3) {\large{{\textbf{\textcolor{deepskyblue}{C2}}}}};
+    \node at (4.1, -6) {\footnotesize{\textbf{1v1 VARIANT}}};
+
     \node at (13.6, -4) {\includegraphics[width=0.52\textwidth]{\maps/gold_rush-2v2.png}};
+    \node at (13.6, -3.5) {\large{{\textbf{\textcolor{deepskyblue}{N1}}}}};
     \node at (13.6, -8.5) {\footnotesize{\textbf{2v2 VARIANT}}};
 \end{tikzpicture}
