--- a/metadata.tex
+++ b/metadata.tex
@@ -154,8 +154,9 @@
 \definecolor{bistre}{rgb}{0.24, 0.17, 0.12}
 \definecolor{cadmiumgreen}{rgb}{0.0, 0.42, 0.24}
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
-\definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
 \definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
+\definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
+\definecolor{deepskyblue}{rgb}{0.0, 0.75, 1.0}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
 
 % Command to frame images
