--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -361,7 +361,9 @@
 % 3) Table contents like title and tabularx environment
 \newcommand{\hommtable}[3][shade, blur shadow={shadow opacity=15}]{
   \begin{tikzpicture}
-    \iftoggle{noartbackground}{}{
+    \iftoggle{noartbackground}{
+      \node[inner sep=0, minimum width=\linewidth, minimum height=#2\baselineskip] at (0,0) {};
+    }{
       \draw (0, 0) node[inner sep=0] {\makebox[\linewidth][c]{\picdims[width=\linewidth]{\linewidth}{#2\baselineskip}{\layout/table-background.jpg}}};
     }
     \draw [bordermidyellow, thick] ([xshift=+1pt, yshift=-1pt] current bounding box.north west) rectangle ([xshift=-1pt, yshift=1pt] current bounding box.south east);
@@ -393,7 +395,9 @@
 % Redefinition of the table for mutlicol enviromnents
 \newcommand{\hommtablemulticol}[3][shade, blur shadow={shadow opacity=15}]{
   \begin{tikzpicture}
-    \iftoggle{noartbackground}{}{
+    \iftoggle{noartbackground}{
+      \node[inner sep=0, minimum width=\linewidth, minimum height=#2\baselineskip] at (0,0) {};
+    }{
       \draw (0, 0) node[inner sep=0] {\makebox[\linewidth][c]{\picdims[width=\linewidth]{\linewidth}{#2\baselineskip}{\layout/table-background-multicol.jpg}}};
     }
     \draw [bordermidyellow, thick] ([xshift=+1pt, yshift=-1pt] current bounding box.north west) rectangle ([xshift=-1pt, yshift=1pt] current bounding box.south east);
@@ -428,6 +432,18 @@
   \begin{tikzpicture}
     \filldraw[line width=1.0pt, fill=darkcellbg, fill opacity=0.5, draw=darkcellborder] (0, 0) rectangle (\linewidth, #1);
     \node[text width=\linewidth, align=center] at (current bounding box.center) {\textbf{#2}};
+  \end{tikzpicture}
+}
+
+\newcommand{\darkcellleft}[2][0.9]{
+  \begin{tikzpicture}
+    \filldraw[line width=1.0pt, fill=darkcellbg, fill opacity=0.5, draw=darkcellborder] (0, 0) rectangle (\linewidth, #1);
+
+    \node[text width=\linewidth, align=left] at (current bounding box.center) {
+      \leftskip=0.4em
+      \rightskip=0pt plus 1fil
+      \textbf{#2}\\
+    };
   \end{tikzpicture}
 }
 
