Remove redundant images plus fix the hunt

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -241,7 +241,7 @@ During this Scenario:
   \end{tabularx}
 }
 
-\iftoggle{noartbackground}{\clearpage}{\vspace{-2em}}
+\vspace{-1em}
 
 \begin{wrapfigure}{l}{0.3\textwidth}
   \raisebox{0pt}[\dimexpr\height-1.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/rust_dragon.jpg}}
@@ -309,7 +309,7 @@ During this Scenario:
   \end{tabularx}
 }
 
-\iftoggle{noartbackground}{\clearpage}{\vspace{-2em}}
+\vspace{-1em}
 
 \begin{wrapfigure}{l}{0.28\textwidth}
   \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/faerie_dragon.jpg}}
