--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-03-26 01:04+0100\n"
+"POT-Creation-Date: 2025-03-26 16:54+0100\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -489,8 +489,8 @@ msgstr ""
 #| "{\\svgunit[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[1.8]{No "
 #| "additional\\\\changes} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 22} & \\lightcell[1.8]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 30} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+#| "hp.png}} 30} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +2 "
 #| "\\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} \\end{tabularx} }"
 msgid ""
@@ -602,11 +602,11 @@ msgstr ""
 #| "{\\svgunit[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.8]{No "
 #| "additional\\\\changes} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 22} & \\lightcell[2.8]"
-#| "{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 26 \\\\ +1 Retaliation}} & \\lightcell[2.8]{\\raisebox{-.25\\height}"
-#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Retaliation "
-#| "\\\\ Remove additional 2 \\svg{damage-table} by consuming Golems} \\\\ "
-#| "\\end{tabularx} }"
+#| "{{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+#| "hp.png}} 26 \\\\ +1 Retaliation}} & \\lightcell[2.8]"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+#| "hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 \\svg{damage-"
+#| "table} by consuming Golems} \\\\ \\end{tabularx} }"
 msgid ""
 "\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze "
 "\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
@@ -640,11 +640,6 @@ msgstr ""
 "& \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Odvetný útok \\\\ Odstraňte dalších 2 "
 "\\svg{damage-table} sežráním Golemů} \\\\ \\end{tabularx} }\\pagebreak"
-
-#. type: Plain text
-#: clash/the_hunt.tex:245 clash/the_hunt.tex:313
-msgid "\\iftoggle{noartbackground}{\\clearpage}{\\vspace{-2em}}"
-msgstr ""
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:284
@@ -721,8 +716,8 @@ msgstr ""
 #| "{\\svgunit[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No "
 #| "additional\\\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+#| "hp.png}} 32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to Corrosion "
 #| "armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
@@ -839,8 +834,8 @@ msgstr ""
 #| "{\\svgunit[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[1.6]{No "
 #| "additional\\\\changes} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 18} & \\lightcell[1.6]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 26} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
+#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/"
+#| "hp.png}} 26} & \\lightcell[1.6]{\\raisebox{-.25\\height}"
 #| "{\\includegraphics[height=15px]{\\images/hp.png}} 32 \\\\ +1 Mirage} \\\\ "
 #| "\\end{tabularx} }"
 msgid ""
