[PL] Fix Sentinels table

--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -654,14 +654,14 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Siła Wrogich Armii}\\\\ \\ "
-"\\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Siła Wrogich Armii}\\"
+"\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
 "{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"\\darkcell{Rundy 6 + 7} & \\darkcell{Rundy 8 + 9} & \\darkcell{Runda 10}\\\\ "
-"\\darkcell[1.4]{Łatwy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
+"& \\darkcell{Rundy 6 + 7} & \\darkcell{Rundy 8 + 9} & \\darkcell{Runda "
+"10}\\\\ \\darkcell[1.4]{Łatwy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
 "\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
@@ -669,14 +669,14 @@ msgstr ""
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Trudny} & \\lightcell[1.4]{\\silver \\silver \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
-"\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-"\\darkcell[1.4]{Niemożliwy} & \\lightcell[1.4]{\\silver \\golden \\golden "
-"\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
-"\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
-"\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
+"\\darkcell[1.4]{Trudny} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
+"\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\golden \\azure \\azure \\footref{azure} "
+"\\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ \\darkcell[1.4]"
+"{Niemożliwy} & \\lightcell[1.4]{\\silver \\golden \\golden \\golden "
+"\\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden \\azure} & "
+"\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
+"\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:196
