--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -228,7 +228,7 @@ msgid ""
 "\n"
 msgstr ""
 "Grając na poziomie Trudnym lub Niemożliwym, traktuj Walki na poziomie V--VII jako łatwiejsze o jeden stopień trudności.\n"
-"Np. Walka poziomu VII na poziomie Trudnym stoczy się przeciwko 2 × \\svgunit{Azure} Jednostkom Neutralnym.\n"
+"Np. Walka poziomu VII na poziomie Trudnym stoczy się przeciwko 2 × \\azure\\ Jednostkom Neutralnym.\n"
 "\n"
 
 #. type: multicols*
