--- a/metadata.tex
+++ b/metadata.tex
@@ -546,7 +546,7 @@
 
 \include{\sections/credits.tex}
 
-% % \include{\sections/notes.tex}
+% \include{\sections/notes.tex}
 
 \include{sections/back_cover.tex}
 
