Clarify border removal

--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -41,7 +41,7 @@ Score the most Victory Points (VPs) by the end of the \nth{16} Round.
 
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item All yellow borders on the Starting (I) Map Tiles are removed.
+  \item All yellow borders on the Starting (I) Map Tiles are ignored until the end fo the game.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
