--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -19,7 +19,7 @@ This Scenario is played over 16 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item 3 × Few \bronze\ Units
+  \item 3 × A Few \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling
@@ -73,7 +73,7 @@ During this Scenario:
 \begin{itemize}
   \item All \svg[12]{movement_token_green} indicate two-way portals instead of one-way.
     Heroes can travel in either direction by paying 1~\svgeven{movement}.
-  \item The portals start inactive (place them the \svg[12]{movement_token_red} side up).
+  \item The portals start inactive (place them the inactive \svg[12]{movement_token_red} side up).
     Heroes must pay 1~\svg{building_materials} and 1~\svgeven{movement} to activate them.
   \item Heroes can destroy portals by paying 1~\svgeven{movement}.
     Flip a destroyd portal the \svg[12]{movement_token_red} side up.
@@ -81,7 +81,7 @@ During this Scenario:
 
 \end{multicols}
 
-\vspace*{-5em}
+\vspace*{-6.5em}
 
 \begin{tikzpicture}[overlay, remember picture]
 
