--- a/clash/main.tex
+++ b/clash/main.tex
@@ -1,21 +1,21 @@
-% \addscenariogroup{\clashtitle}{\layout/clash.png}
+\addscenariogroup{\clashtitle}{\layout/clash.png}
 
-% \clearpage
-%
-% \input{\clashpath/bloody_grail.tex}
-%
-% \clearpage
-%
-% \input{\clashpath/the_hunt.tex}
-%
-% \clearpage
-%
-% \input{\clashpath/dragoncurse_castle.tex}
-%
-% \clearpage
-%
-% \input{\clashpath/force_of_will.tex}
+\clearpage
 
-% \clearpage
-%
+\input{\clashpath/bloody_grail.tex}
+
+\clearpage
+
+\input{\clashpath/the_hunt.tex}
+
+\clearpage
+
+\input{\clashpath/dragoncurse_castle.tex}
+
+\clearpage
+
+\input{\clashpath/force_of_will.tex}
+
+\clearpage
+
 \input{\clashpath/the_fractured_kingdoms.tex}
