--- a/metadata.tex
+++ b/metadata.tex
@@ -543,20 +543,20 @@
 
 \clearpage
 
-% \include{\sections/what_to_play.tex}
+\include{\sections/what_to_play.tex}
 
-% \include{coops/main.tex}
+\include{coops/main.tex}
 
 \include{clash/main.tex}
 
-% \include{campaigns/main.tex}
+\include{campaigns/main.tex}
 
-% \include{\sections/recommendations.tex}
+\include{\sections/recommendations.tex}
 
-% \include{\sections/credits.tex}
+\include{\sections/credits.tex}
 
 % \include{\sections/notes.tex}
 
-% \include{sections/back_cover.tex}
+\include{sections/back_cover.tex}
 
 \end{document}
