--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -100,6 +100,10 @@ During this Scenario:
     \node[rotate=#3] at (#1, #2) {\svg[20]{movement_token_green}};
   }
 
+  \node(bg)[anchor=center, opacity=0.07, xshift=2em, yshift=-9em] at (current page.center) {
+    \includegraphics[width=1.25\paperwidth, keepaspectratio]{\art/two_way_monolith.png}
+  };
+
   \node at (9, -12) {\includegraphics[width=0.9\paperwidth]{\maps/the_fractured_kingdoms.png}};
 
   \arrow{12.35}{-15.7}{-142}
