--- a/metadata.tex
+++ b/metadata.tex
@@ -89,7 +89,7 @@
 
 \captionsetup[figure]{labelformat=empty}
 \captionsetup[subfigure]{labelformat=empty, singlelinecheck=off, justification=centering}
-\usetikzlibrary{shadows, shadows.blur, patterns, calc, backgrounds, arrows.meta}
+\usetikzlibrary{shadows, shadows.blur, patterns, calc, backgrounds, arrows.meta, babel}
 
 \setlength{\columnsep}{1cm}
 \newtoggle{printable}
