--- a/metadata.tex
+++ b/metadata.tex
@@ -89,7 +89,7 @@
 
 \captionsetup[figure]{labelformat=empty}
 \captionsetup[subfigure]{labelformat=empty, singlelinecheck=off, justification=centering}
-\usetikzlibrary{shadows, shadows.blur, calc, backgrounds, arrows.meta}
+\usetikzlibrary{shadows, shadows.blur, patterns, calc, backgrounds, arrows.meta, babel}
 
 \setlength{\columnsep}{1cm}
 \newtoggle{printable}
@@ -153,6 +153,7 @@
 \definecolor{camel}{rgb}{0.76, 0.6, 0.42}
 \definecolor{cobalt}{rgb}{0.0, 0.28, 0.67}
 \definecolor{darkcandyapplered}{rgb}{0.64, 0.0, 0.0}
+\definecolor{darkyellow}{RGB}{204, 154, 0}
 \definecolor{deepskyblue}{rgb}{0.0, 0.75, 1.0}
 \definecolor{goldenbrown}{rgb}{0.6, 0.4, 0.08}
 
