--- a/translations/the_fractured_kingdoms.tex/the_fractured_kingdoms.tex.pot
+++ b/translations/the_fractured_kingdoms.tex/the_fractured_kingdoms.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-03-29 21:01+0100\n"
+"POT-Creation-Date: 2025-03-30 00:09+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -195,7 +195,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All yellow borders on the Starting (I) Map Tiles are ignored until the end fo the game.\n"
+"  \\item All yellow borders on the Starting (I) Map Tiles are ignored until the end of the game.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
