--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-03-29 21:01+0100\n"
+"POT-Creation-Date: 2025-03-30 00:09+0100\n"
 "PO-Revision-Date: 2025-03-29 21:01+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -244,7 +244,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All yellow borders on the Starting (I) Map Tiles are ignored until the end fo the game.\n"
+"  \\item All yellow borders on the Starting (I) Map Tiles are ignored until the end of the game.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
